designed signin page

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">techtogether2020</string>
+    <string name="app_name">Techtogether2020</string>
+    <string name="name">APP NAME</string>
+    <string name="signin">SIGN IN</string>
+    <string name="signup">SIGN UP</string>
+    <string name="username">USERNAME</string>
+    <string name="password">PASSWORD</string>
 </resources>
