--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -3,6 +3,16 @@
     <string name="name">APP NAME</string>
     <string name="signin">SIGN IN</string>
     <string name="signup">SIGN UP</string>
+    <string name="fullname">FULL NAME</string>
     <string name="username">USERNAME</string>
     <string name="password">PASSWORD</string>
+    <string name="interests">INTERESTS</string>
+    <string-array name="interests_array">
+        <item>Running</item>
+        <item>TikTok</item>
+        <item>Cooking</item>
+        <item>Music</item>
+        <item>Animals</item>
+        <item>Technology</item>
+    </string-array>
 </resources>
