--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="name">APP NAME</string>
     <string name="signin">SIGN IN</string>
     <string name="signup">SIGN UP</string>
-    <string name="username">USERNAME</string>
+    <string name="email">EMAIL</string>
     <string name="password">PASSWORD</string>
 </resources>
