add spinner to signup

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -8,8 +8,9 @@
     <string name="fullname">FULL NAME</string>   
     <string name="interests">INTERESTS</string>
     <string-array name="interests_array">
+        <item></item>
+        <item>Hackathons</item>
         <item>Running</item>
-        <item>TikTok</item>
         <item>Cooking</item>
         <item>Music</item>
         <item>Animals</item>
