added logo, fixed font

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Techtogether2020</string>
-    <string name="name">APP NAME</string>
+    <string name="name">CHATOPEDIA</string>
     <string name="signin">SIGN IN</string>
     <string name="signup">SIGN UP</string>
     <string name="email">EMAIL</string>
